# my_little_programming_language

./: CMakeLists.txt  README.md  bnf.txt  simple_grammar.txt
compiler/: CMakeLists.txt  grammar  grammar.h  main.cpp  profile.h  token.cpp  token.h
compiler/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  rules.h  test_lexer.cpp  token_recognizer.cpp  token_recognizer.h
compiler/token/: CMakeLists.txt  token.cpp  token.h
examples/: example1.txt
interpreter/: CMakeLists.txt  instructions.h  interpreter.cpp  interpreter.h  main.cpp  object.cpp  object.h  profile.h  variable.h  virtual_machine.cpp  virtual_machine.h
interpreter/containers/: hash_set.h  linked_list.h
interpreter/objects/: object.cpp  object.h
interpreter/parsers/: CMakeLists.txt  parsing_stuff.cpp  parsing_stuff.h
tests/: CMakeLists.txt  main.cpp
tests/test_lexer/: CMakeLists.txt  test_lexer.cpp
tests/test_token/: CMakeLists.txt  test_token.cpp
